[tool.poetry]
name = "jrnl"
version = "0.0"
description = ""
authors = []

[tool.poetry.scripts]
jrnl = 'jrnl.main:run'

[tool.poetry.dependencies]
python = ">=3.10.0, <3.13"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
tox = "*"

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
# see: https://tox.wiki/en/latest/example/basic.html
legacy_tox_ini = """
[tox]
envlist = py
isolated_build = True

[testenv]
deps =
  pytest >= 6.2

commands = pytest -v {posargs}
passenv = HOME
"""
